force-app/main/default/objects/Attendance__c/fields/Attendence_Number__c.field-meta.xml
<CustomField>
    <fullName>Attendence_Number__c</fullName>
    <displayFormat>A-{0000000}</displayFormat>
    <label>Attendence Number</label>
    <type>AutoNumber</type>
</CustomField>