force-app/main/default/objects/Attendance__c/fields/Cut_off_Time__c.field-meta.xml
<CustomField>
    <fullName>Cut_off_Time__c</fullName>
    <label>Cut-off Time</label>
    <type>Time</type>
</CustomField>