force-app/main/default/objects/Attendance__c/fields/Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked__c</fullName>
    <formula>IF(
 FLOOR((Logout_Time__c-Login_Time__c)*24)&gt;9,
 TEXT(FLOOR((Logout_Time__c-Login_Time__c)*24)),
 &quot;0&quot; &amp; TEXT(FLOOR((Logout_Time__c-Login_Time__c)*24))
 )
 &amp;&quot;H&quot;&amp;
 IF(
 ROUND(MOD((Logout_Time__c-Login_Time__c)*1440,60),0)&gt;9,
 TEXT(ROUND(MOD((Logout_Time__c-Login_Time__c)*1440,60),0)),
 &quot;0&quot;&amp;TEXT(ROUND(MOD((Logout_Time__c-Login_Time__c)*1440,60),0))
 )
&amp;&quot;M&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Worked</label>
    <type>Text</type>
</CustomField>