force-app/main/default/objects/Attendance__c/fields/Sales_User__c.field-meta.xml
<CustomField>
    <fullName>Sales_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Attendance</relationshipName>
    <type>Lookup</type>
</CustomField>