force-app/main/default/objects/Attendance__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Present</fullName>
            </value>
            <value>
                <fullName>Absent</fullName>
                <default>true</default>
                <label>Absent</label>
            </value>
            <value>
                <fullName>Leave - In Approval</fullName>
            </value>
            <value>
                <fullName>Leave - Approved</fullName>
            </value>
            <value>
                <fullName>Holiday</fullName>
            </value>
            <value>
                <fullName>Week-Off</fullName>
            </value>
            <value>
                <fullName>Casual Leave</fullName>
            </value>
            <value>
                <fullName>Sick Leave</fullName>
            </value>
            <value>
                <fullName>Half Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>