force-app/main/default/objects/Attendance__c/fields/Userwise_Working_Day__c.field-meta.xml
<CustomField>
    <fullName>Userwise_Working_Day__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Userwise Working Day</label>
    <referenceTo>Userwise_Working_Day__c</referenceTo>
    <relationshipLabel>Attendance</relationshipLabel>
    <relationshipName>Attendance</relationshipName>
    <type>Lookup</type>
</CustomField>